@@ -1,4 +1,5 @@
 0.4.4 - currently working on
+- [#2435] Change: Allow having non-identical template objects for the same template file
 - [#2321] Feature: The FE user data mapper should be able to get and use the currently logged-in FE user
 - [#2322] Feature: Create an autoloader for models and other classes
 - [#2417] Feature: CreateFrontEndUser should automatically create a group if needed
